# Windows-Kit

./: .gitignore
acl/: ACT_FAQ.xps  DeploymentGuide.xps  README.txt  build-options.txt
acl/Quick Start Guides/: Phase1_Collecting_Data.xps  Phase2_Analyzing_Issues.xps
acl/act/: Step_by_Step.xps
acl/act/Quick Start Guides/: Configuration_and_Troubleshooting.xps  Phase3_Testing_and_Mitigating_Issues.xps
acl/pkg/apt-1.4.8/: apt_1.4.8.tar.xz
acl/setup/: .appveyor.yml  .cvsignore  .gitignore  AntiVirus.cc  AntiVirus.h  CONTRIBUTORS  ConnectionSetting.cc  ControlAdjuster.cc  Exception.h  IOStreamProvider.h  IniDBBuilderPackage.cc  IniDBBuilderPackage.h  KeysSetting.cc  KeysSetting.h  LogFile.cc  LogFile.h  LogSingleton.cc  LogSingleton.h  Makefile.am  PackageSpecification.cc  PackageSpecification.h  PackageTrust.h  PickCategoryLine.cc  PickCategoryLine.h  PickLine.h  PickPackageLine.cc  PickView.cc  PickView.h  README  RECTWrapper.h  SourceSetting.cc  SourceSetting.h  String++.cc  String++.h  UserSettings.cc  UserSettings.h  WISHLIST  archive.cc  archive.h  archive_tar.cc  (+112 more)
acl/setup/csu_util/: MD5Sum.cc  MD5Sum.h  rfc1738.h
acl/setup/libgetopt++/: .cvsignore  configure.ac
acl/setup/libgetopt++/include/getopt++/: BoolOption.h  DefaultFormatter.h  GetOption.h  Option.h  StringArrayOption.h  StringOption.h
acl/setup/libgetopt++/src/: BoolOption.cc  GetOption.cc  Option.cc  OptionSet.cc  StringArrayOption.cc  StringOption.cc
acl/setup/tests/: Makefile.am  UserSettingTest.cc  UserSettingsTest.cc
acl/src/: Cygwin FAQ.htm  Cygwin User's Guide.htm  cygwin-snapshot.mknetrel
acl/src/Cygwin User's Guide_files/: docbook.htm
public/src/: UpgradeLog.htm  WindowsAPICodePack10.sln
public/src/Core/: Core.csproj
public/src/ExtendedLinguisticServices/: ExtendedLinguisticServices.csproj
public/src/Sensors/: Sensors.csproj
public/src/Shell/: Shell.csproj
public/src/WindowManager/: CustomCommands.cs  MainWindow.xaml.cs  NameInputWindow.xaml.cs  SizeSelectedEventArgs.cs  SizeSelectionViewModel.cs  WindowManager.csproj  WindowManager.sln
samples/Aero/: Aero.sln  Aero.vcxproj  Aero.vcxproj.filters  RCa09508  UpgradeLog.htm
snippets/VC#/: SavetoImage.snippet  Visual Studio Snippets.xlsx  aclass.snippet  add.snippet  attribute.snippet  break.snippet  catch.snippet  cctor.snippet  cex.snippet  cexg.snippet  checked.snippet  class.snippet  cr.snippet  ctor.snippet  da.snippet  dec.snippet  delegate.snippet  do.snippet  dw.snippet  elseif.snippet  enum.snippet  equals.snippet  event.snippet  eventargs.snippet  eventargsext.snippet  ex.snippet  exception.snippet  exg.snippet  field.snippet  finally.snippet  for.snippet  forr.snippet  head.snippet  identity.snippet  inc.snippet  indexer.snippet  interface.snippet  invoke.snippet  item.snippet  iterator.snippet  (+35 more)
snippets/VF#/: async.snippet  delegate.snippet  interactive.snippet  main.snippet  measure.snippet  method.snippet  prop.snippet  prop2.snippet  xmldoc.snippet
snippets/VF#/Application/: check ClickOne info.snippet  delete file from isolated stroage.snippet  get available size from isolated stroage.snippet  get process output.snippet  get resource from assembly.snippet  load an assembly at runtime.snippet  read text from isolated storage.snippet  write text to isolated storage.snippet
snippets/VF#/Azure/: create Azure Service Bus Queue.snippet  create Azure cloud queue.snippet  create blob and set permisson.snippet  create blob storage.snippet  receive message from Azure Service Bus Queue.snippet  send message to Azure Service Bus Queue.snippet
snippets/VF#/Basic Data Structures/: abstract method.snippet  abstract property.snippet  array.snippet  attribute.snippet  class.snippet  classex.snippet  convert dictionary to F# map.snippet  du.snippet  interface.snippet  list.snippet  record.snippet  struct.snippet  virtual method.snippet
snippets/VF#/Connection/: dail phone number from serial port.snippet  download file using HTTP.snippet  ping another computer.snippet  read data from serial port.snippet
snippets/VF#/OS/: create registry key.snippet  delete a registry key.snippet  process single file in zip file.snippet  read delimiter file.snippet  read registry key value.snippet  read text file.snippet  unzip a folder.snippet  write registry key value.snippet  write to a text file.snippet  zip a folder.snippet  zip file manually.snippet
snippets/VF#/RIA Service/: domain service fro RIA service.snippet
snippets/VF#/Security/: decrypt a file.snippet  encrypt data.snippet  generate hash digest.snippet  generate random data.snippet  get hash value of a password string.snippet
snippets/VF#/Statements/: Genetic Invoke Function.snippet  Mailbox processor definition.snippet  check variable type.snippet  extension method for C#.snippet  fordt.snippet  fori.snippet  fort.snippet  ifelse.snippet  match.snippet  object expression.snippet  try.snippet  tryf.snippet  uncheck default value.snippet  while.snippet
snippets/VF#/Test/: testc.snippet  testm.snippet
snippets/VF#/Type Providers and Query/: OData type provider.snippet  query.snippet  sql entity type provider.snippet  sqlcontp.snippet  wsdl type provider.snippet
snippets/VF#/XML/: object xml serialization.snippet  serialization to xml.snippet
tools/GuidGen/: GuidGen.aps  GuidGen.cpp  GuidGen.sln  GuidGen.vcxproj  GuidGen.vcxproj.filters  RCa13916  UpgradeLog.htm  aboutdlg.h  atlapp.h  atlres.h  stdatl.h
tools/GuidGen/Debug/: vc141.idb
tools/GuidGen/Release/: GuidGen.exe.manifest  GuidGen.res
tools/MyBuildToolCS/: MyBuildTool.csproj  Program.cs
tools/MyBuildToolCS/Properties/: AssemblyInfo.cs
tools/MyBuildToolFS/: MyBuildToolFS.fsproj  MyBuildToolFS.sln  Program.fs
tools/ftp/src/: ftp.cs  ftp.csproj  ftp.sdf  ftp.sln  ftp.vcxproj.filters  ftpcpp.vcxproj  stdafx.cpp
tools/grep/: ParallelGrep.cs  ParallelGrep_CSharp.csproj  ParallelGrep_CSharp.sln  pgrep.snk
tools/notepadwinforms/: Form1.cs  NotepadWinForms.csproj
tools/notepadwpf/: AboutDialog.cs  NotepadWPF.csproj
tools/nslookup/: NSLookup.csproj  NSLookup.sln  nslookup.xml
(+82 files in other folders)
